--- a/KineticTypography/Tutorial4/style.css
+++ b/KineticTypography/Tutorial4/style.css
@@ -12,5 +12,11 @@ html {
 body {
   width: 100%;
   height: 100%;
-  background-color: #ffffff;
+  background-color: #000000;
+  touch-action: none;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
 }
